[package]
name = "pow-grinder"
version = "0.0.1"
edition = "2021"
description = "Fast MsgBoard proof-of-work grinder (bit-identical to reth msgboard-types pow.rs)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# native node addon (bots' worker_threads grinder)
napi = ["dep:napi", "dep:napi-derive"]
# browser Web Worker grinder
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]

[dependencies]
# secp256k1 point arithmetic (projective coords → no per-step inversion, ~100x the JS `elliptic` loop),
# pure-Rust so it also compiles to wasm32 for the browser worker.
k256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
sha2 = { version = "0.10", default-features = false }
# 256-bit integer arithmetic for the scalar reduction + the hash % difficulty check, mirroring the
# node's U256 carry handling exactly.
primitive-types = { version = "0.12", default-features = false }
napi = { version = "2", default-features = false, features = ["napi8"], optional = true }
napi-derive = { version = "2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[build-dependencies]
# only runs (on the host) when the `napi` feature is on — wires the Node-API addon linkage.
napi-build = "2"
